<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    tools:context=".DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <View
            android:id="@+id/divider7"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/borderColor" />

        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:text="@string/dashboard"
            android:textColor="@color/iconBackground"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="12dp"
            android:height="40dp"
            android:background="@drawable/ic_settings"
            android:backgroundTint="@color/titleColor"
            android:drawableTint="@color/colorAccent"
            android:gravity="right|end"
            android:onClick="refreshInformation" />

    </LinearLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/borderColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/lightBackground"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/money_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBackground"
                android:backgroundTint="@color/borderColor"
                android:src="@drawable/ic_money"
                android:tint="@color/lightBackground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/total_net_worth"
                android:textAlignment="center"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/total_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/usd_placeholder"
            android:textAlignment="center"
            android:textColor="#fafafa"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/ars_placeholder"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/borderColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/lightBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBackground"
                android:backgroundTint="@color/borderColor"
                android:src="@drawable/ic_pie_chart"
                android:tint="@color/lightBackground" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/portfolio_composition"
                android:textAlignment="center"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/composition"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_marginTop="20dp">

        </com.github.mikephil.charting.charts.PieChart>


        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/borderColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:background="@color/lightBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBackground"
                android:backgroundTint="@color/borderColor"
                android:src="@drawable/ic_line_chart"
                android:tint="@color/lightBackground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/historical_net_worth"
                android:textAlignment="center"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp" />
        </LinearLayout>


        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/borderColor" />
    </LinearLayout>


</LinearLayout>